<resources>
    <string name="app_name">AutoSort</string>
    <string name="action_settings">Settings</string>
    <string name="path_select_button">. . .</string>
    <string name="target_path">Select Target Path</string>
    <string name="result_path">Select Result Path</string>
    <string name="btn_add">ADD</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="extension_hint">Extension</string>
    <string name="btn_select">SELECT</string>
    <string name="not_dir">It\'s not a directory!!!\nPlease select a directory.</string>
    <string name="already_item">Already item</string>
    <string name="ok">OK</string>
    <string name="clean_start">Start Clean</string>
    <string name="close">Close</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_first">1. Click &quot;+&quot; Button</string>
    <string name="tutorial_second">2. Select path where you want sort.\n(Click ... Button)</string>
    <string name="tutorial_three">3. Input extension and click &quot;ADD&quot; button</string>
    <string name="tutorial_four">4. If you add all extensions, Click &quot;Save&quot; Button</string>
    <string name="tutorial_five">5. Finally, turn on the switch</string>
    <string name="tutorial_six">You can always see this tutorial in the menu</string>
    <string name="permission_request">Please Allow Permission and restart!!!</string>
</resources>
