<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">

    <TextView
            android:text="@string/tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="24sp" android:layout_gravity="center"
            android:gravity="center"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            android:id="@+id/scrollView2" android:layout_weight="4">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/tutorial_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" android:textSize="18sp" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp" android:layout_gravity="center" android:gravity="center"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/tutorial_first"
                    android:id="@+id/imageView3" android:layout_gravity="center"
                    android:paddingLeft="70dp" android:paddingRight="70dp" android:paddingBottom="10dp"
                    android:paddingTop="10dp"/>
            <TextView
                    android:text="@string/tutorial_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="18sp"
                    android:gravity="center" android:layout_marginTop="18dp"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/tutorial_second"
                    android:id="@+id/imageView4"/>
            <TextView
                    android:text="@string/tutorial_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:textSize="18sp"
                    android:gravity="center" android:layout_marginTop="18dp"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/tutorial_three"
                    android:id="@+id/imageView5"/>
            <TextView
                    android:text="@string/tutorial_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_marginTop="18dp"
                    android:textSize="18sp" android:gravity="center"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/tutorial_four"
                    android:id="@+id/imageView7"/>
            <TextView
                    android:text="@string/tutorial_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:textSize="18sp"
                    android:layout_marginTop="18dp" android:gravity="center"/>
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/tutorial_five"
                    android:id="@+id/imageView"/>
            <TextView
                    android:text="@string/tutorial_six"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView7" android:textSize="24sp"
                    android:layout_marginTop="10dp" android:gravity="center"/>
            <Button
                    android:text="@string/close"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/Btn_ok" android:layout_marginTop="10dp"
                    android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>