<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Tutorial">

    <TextView
            android:text="@string/tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9" android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/frameLayout" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="5dp" android:visibility="invisible"
                android:id="@+id/linear5">
            <TextView
                    android:text="@string/tutorial_six"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textSize="20sp"
                    android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="5dp" android:visibility="visible"
                android:id="@+id/linear0">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="459dp" app:srcCompat="@drawable/tutorial_first"
            />
            <TextView
                    android:text="@string/tutorial_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textSize="20sp"
                    android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="5dp" android:visibility="invisible"
                android:id="@+id/linear1">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="459dp" app:srcCompat="@drawable/tutorial_second"
            />
            <TextView
                    android:text="@string/tutorial_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textSize="20sp"
                    android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="5dp" android:visibility="invisible"
                android:id="@+id/linear2">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="459dp" app:srcCompat="@drawable/tutorial_three"
            />
            <TextView
                    android:text="@string/tutorial_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textSize="20sp"
                    android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="5dp" android:visibility="invisible"
                android:id="@+id/linear3">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="459dp" app:srcCompat="@drawable/tutorial_four"
            />
            <TextView
                    android:text="@string/tutorial_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textSize="20sp"
                    android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="5dp" android:visibility="invisible"
                android:id="@+id/linear4">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="459dp" app:srcCompat="@drawable/tutorial_five"
            />
            <TextView
                    android:text="@string/tutorial_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:textSize="20sp"
                    android:gravity="center"/>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:id="@+id/linearLayout">
        <Button
                android:text="@string/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/prevBtn" android:layout_weight="1"/>
        <Button
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/nextBtn" android:layout_weight="1"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>