<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/target_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/TextView_targetPath"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/Btn_targetPath"
            android:layout_marginTop="30dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            app:layout_constraintHorizontal_weight="4" android:layout_marginLeft="20dp"
            android:layout_marginRight="18dp"/>
    <TextView
            android:text="@string/result_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/TextView_resultPath"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/Btn_resultPath"
            app:layout_constraintTop_toBottomOf="@+id/TextView_targetPath"
            android:layout_marginTop="32dp" android:textSize="24sp" app:layout_constraintHorizontal_weight="4"
            android:layout_marginLeft="20dp" android:layout_marginRight="18dp"
            app:layout_constraintHorizontal_chainStyle="packed"/>
    <Button
            android:text="@string/path_select_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/TextView_targetPath"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/Btn_targetPath"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="1" android:layout_marginRight="20dp"/>
    <Button
            android:text="@string/path_select_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Btn_resultPath"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/TextView_resultPath"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Btn_targetPath" app:layout_constraintHorizontal_weight="1"
            android:layout_marginRight="20dp"/>
    <Button
            android:text="@string/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/Btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Btn_cancel"
            app:layout_constraintStart_toEndOf="@id/Btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="454dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:id="@+id/List_sortRule"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Edit_extension"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Edit_extension"
            android:hint="@string/extension_hint" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/TextView_resultPath"/>
    <Button
            android:text="@string/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Btn_addExt" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/Btn_resultPath" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" android:layout_marginRight="20dp"
            app:layout_constraintStart_toEndOf="@+id/Edit_extension" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>
</android.support.constraint.ConstraintLayout>